test/types/range/bradc/countInt32-uint64.good
countInt32-uint64.chpl:3: error: illegal use of '#' on operands of type signed integer and uint(64)
