test/types/range/bradc/countInt32-uint64.chpl
var m: uint(64) = max(uint(64));

var r = 0..#m;

writeln("r is: ", r);
